# UOU-computational-physics

./: .gitignore  README.md  pyproject.toml  sample.dot  sample3.dot  sample4.dot  step01.py  step02.py  step03.py  step04_1.py  step04_2.py  step06.py  step07.py  step08.py  step09.py  step16.py  step17.py  step18.py  step20.py  step24.py  step26.py  step27.py  step27_1.py  step27_2.py  step28.py  step29.py  step38.py  step39.py  step40.py  step41.py  step42_2.py  step43_3.py  step44_3.py  step45_4.py  step45_5.py  step46_2.py
cpnn/: __init__.py  core.py  core_simple.py  cuda.py  dataloaders.py  datasets.py  functions.py  layers.py  models.py  optimizers.py  transforms.py  utils.py
cpnn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
