[build-system]
requires = ["setuptools>=59.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cpnn"
version = "0.1.0"
description = "NN module"
readme = "README.md"
authors = [
	{ name="iyjang", email="dudfine1026@naver.com"}
]
license = { text = "MIT"}
dependencies = [
	"numpy",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com:iyjang1026/UOU-computational-physics"
"Repository" = "https://github.com:iyjang1026/UOU-computational-physics"

[tool.setuptools.packages.find]
where = ["."]

