[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpnn"
version = "0.1.0"
description = "전산물리 학습용 신경망 모듈"
readme = "README.md"
authors = [
    { name="Young-Han Shin", email="yhshin.at.uou@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://gitlab.com:yhshin/cpnn"
"Repository" = "https://gitlab.com:yhshin/cpnn"

[tool.setuptools.packages.find]
where = ["."]
